fix(acessiblity): Move acessibility toolbar to menu on mobile

--- a/src/components/overlay-menu/overlay-menu.component.scss
+++ b/src/components/overlay-menu/overlay-menu.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     gap: 1em;
     flex-direction: column;
-
+    margin-bottom: 1em;
     button {
         width: 9em;
     }
